--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require": {
         "php": "^7.2",
         "giggsey/libphonenumber-for-php": "^8.4",
-        "illuminate/support": "5.8.*|6.*",
+        "illuminate/support": "5.8.*|6.*|7.*",
         "league/csv": "^9.2"
     },
     "require-dev": {
