--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "giggsey/libphonenumber-for-php": "^8.4",
-        "illuminate/support": "5.8.*|6.*|7.*",
-        "league/csv": "^9.2"
+        "php": "^7.2|^7.2",
+        "giggsey/libphonenumber-for-php": "8.*",
+        "illuminate/support": "5.8.*|6.*|7.*|8.*",
+        "league/csv": "9.*"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
