--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.*",
+        "php": "^7.2|^8.0",
         "giggsey/libphonenumber-for-php": "8.*",
         "illuminate/support": "5.8.*|6.*|7.*|8.*",
         "league/csv": "9.*"
