--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
         "league/csv": "9.*"
     },
     "require-dev": {
-        "orchestra/testbench": "3.8.*",
-        "phpunit/phpunit": "^7.0"
+        "orchestra/testbench": "3.8.*|^4.0|^5.0|^6.0",
+        "phpunit/phpunit": "^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
