--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
     "require": {
         "php": "^7.2|^8.0",
         "giggsey/libphonenumber-for-php": "8.*",
-        "illuminate/support": "5.8.*|6.*|7.*|8.*",
+        "illuminate/support": "7.*|8.*|9.*",
         "league/csv": "9.*"
     },
     "require-dev": {
-        "orchestra/testbench": "3.8.*|^4.0|^5.0|^6.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0",
         "phpunit/phpunit": "^7.0|^8.0|^9.0"
     },
     "autoload": {
